# agent-deploy

./: .gitignore  AGENT_FORMATS.md  CONTRIBUTING.md  DEVELOPMENT.md  MAINTENANCE.md  README.md  SKILL.md  agent.json  mcp_config.example.json
agent-bridge/: package.json  server.ts
agent-hub-project-docs/: agent-hub-project-docs.html
docs/: PROJECT_OVERVIEW.md  index.html
docs/dev/: builtin-tools-summary.md  phase5-invoke-agent-poc.md
docs/guides/: CLI_IMPORT_GUIDE.md  IMPORT_ADAPTER_SPEC.md  USER_GUIDE.md
docs/specs/: AGENT_JSON_SPEC_V2.md
legacy/: README.md  pyproject.toml  requirements.txt
legacy/src/agent_deploy/: __init__.py  adapt.py  install.py  migrate.py  server.py  skill_mcp_cli.py  tools-registry.yaml
node/: .eslintrc.json  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  policy.yaml  registration  tsconfig.json  verify-bootstrap.sh  verify-self-bootstrap.sh  vitest.config.ts
node/docs/: cli-run-command.md  langchain-migration.md  phase5-complete.md  phase5-final-summary.md  phase5-practical-exercise.md  phase6-plan.md  subagent-mechanism.md
node/grafana/: dashboard.json
node/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
node/logs/: audit-2026-06-20.jsonl  audit-2026-06-21.jsonl
node/src/: adapt.ts  auth-oidc.ts  auth.ts  check-updates.ts  cli.ts  detect.ts  errors.ts  http-server.ts  http-transport.ts  import-manager.ts  import.ts  index.ts  install.ts  local-registry.ts  lockfile.ts  market-registry.ts  market.ts  metrics.ts  preview.ts  registry.ts  scan-deployed.ts  (+9 more)
tests/: test_server.py
(+76 files in other folders)
